--- a/portfolio-site/static/index.html
+++ b/portfolio-site/static/index.html
@@ -16,8 +16,37 @@
         <link rel="stylesheet" href="css/style.css">
   </head>
   <body data-spy="scroll" data-target="#exampleNavComponents">
+    <!-- Nav Menu -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+     <div class="container">
 
-    <!-- Put Content Here -->
+        <!-- Navbar Header [collects both toggle button and navbar brand] -->
+        <div class="navbar-header">
+          <!-- Toggle Button [handles opening navbar menu on mobile screens]-->
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#exampleNavComponents" aria-expanded "false">
+            <i class="glyphicon glyphicon-menu-hamburger"></i>
+          </button>
+
+          <!-- Navbar Brand -->
+          <a href="#" class="navbar-brand">
+            <img src="img/logo.svg" alt="Stanlon Design">
+          </a>
+        </div>
+
+        <!-- Navbar Collapse [collect navbar components such as navbar links and forms ] -->
+        <div class="collapse navbar-collapse" id="exampleNavComponents">
+            <!-- Navbar Links -->
+          <ul id="main-nav" class="nav navbar-nav navbar-right main-nav">
+            <li><a href="#home" class="smooth-scroll">Home</a></li>
+            <li><a href="#about" class="smooth-scroll">About</a></li>
+            <li><a href="#skills" class="smooth-scroll">Skills</a></li>
+            <li><a href="#portfolio" class="smooth-scroll">Portfolio</a></li>
+            <li><a href="#designs" class="smooth-scroll">Designs</a></li>
+            <li><a href="#contact" class="smooth-scroll">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav><!--Closing Tag for Na Menu -->
 
     <!-- JavaScript -->
     <!-- jQuery )JS -->
