Added Home Section

--- a/portfolio-site/static/index.html
+++ b/portfolio-site/static/index.html
@@ -48,6 +48,16 @@
       </div>
     </nav><!--Closing Tag for Na Menu -->
 
+    <!-- Home Section -->
+    <section id="home" class="parallax-container container--big">
+      <div class="home">
+        <h1>Stanlon Design</h1>
+        <br>
+        <p>Front End Web Developer</p>
+      </div>
+      <div class="parallax parallax--bg bg-1"></div>
+    </section><!--Closing Tag for Home Section -->
+
     <!-- JavaScript -->
     <!-- jQuery )JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
