Added Skills Parallax Div

--- a/portfolio-site/static/index.html
+++ b/portfolio-site/static/index.html
@@ -77,6 +77,20 @@
       </div>
     </div><!-- Closing Tag for About Section -->
 
+    <!-- Skills Parallax Div -->
+    <div id="skills">
+      <section id="title-section" class="parallax-container container--small title-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1>Knowledge &amp; Skills</h1>
+            </div>
+          </div>
+        </div>
+        <div class="parallax parallax--bg bg-4"></div>
+      </section>
+    </div><!-- Closing Tag for Skills Parallax Div -->
+
     <!-- JavaScript -->
     <!-- jQuery )JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
