Added Portfolio Parallax Div

--- a/portfolio-site/static/index.html
+++ b/portfolio-site/static/index.html
@@ -239,6 +239,20 @@
       </div>
     </div><!-- Closing Tag for Skills Section -->
 
+    <!-- Portfolio Parallax Div -->
+    <div id="portfolio">
+      <section id="title-section" class="parallax-container container--small title-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1>Portfolio</h1>
+            </div>
+          </div>
+        </div>
+        <div class="parallax parallax--bg bg-5"></div>
+      </section>
+    </div><!-- Closing Tag for Skills Parallax Div -->
+
     <!-- JavaScript -->
     <!-- jQuery )JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
