Added Design Parallax Div

--- a/portfolio-site/static/index.html
+++ b/portfolio-site/static/index.html
@@ -409,6 +409,20 @@
       </div>
     </div><!-- Closing Tag for Portfolio Section -->
 
+    <!-- Design Parallax Div -->
+    <div id="designs">
+      <section id="title-section" class="parallax-container container--small title-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1>Animation, Design &amp; Photography</h1>
+            </div>
+          </div>
+        </div>
+        <div class="parallax parallax--bg bg-2"></div>
+      </section>
+    </div><!-- Closing Tag for Design Parrallax Div -->
+
     <!-- JavaScript -->
     <!-- jQuery )JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
