--- a/portfolio-site/static/index.html
+++ b/portfolio-site/static/index.html
@@ -423,6 +423,68 @@
       </section>
     </div><!-- Closing Tag for Design Parrallax Div -->
 
+    <!-- Design Section  -->
+    <div id="design" class="container designs">
+      <div class="row">
+        <div class="col-sm-6 col-md-4 design">
+          <div class="thumbnail">
+            <img src="img/books.gif" alt="books dropping">
+            <div class="caption">
+              <h3>Hitting the Books</h3>
+              <p>Created this isometric svg illustration using Illustrator. Then used CSS3 to turn it into an animation.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 design">
+          <div class="thumbnail">
+            <img src="img/rocket.gif" alt="Rocket launching">
+            <div class="caption">
+              <h3>Rocket Launch</h3>
+              <p>The making of this 2D svg animation was complex. Used Illustrator to create the graphic, then CSS3 to animate it.</p>
+            </div>
+          </div>
+        </div>
+        <div class="clearfix visible-sm-block"></div>
+        <div class="col-sm-6 col-md-4 design">
+          <div class="thumbnail">
+            <img src="img/castle.gif" alt="red rocks">
+            <div class="caption">
+              <h3>Castle in the Clouds</h3>
+              <p>This is one of my all time favorite svg animations. Simple, quick, straight to the point and full of creativity.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 design">
+          <div class="thumbnail">
+            <img src="img/red_rocks.jpg" alt="Red Rocks Colorado">
+            <div class="caption">
+              <h3>Red Rocks, CO</h3>
+              <p>Took this picture on my phone and used Photoshop to edit it. Covered the parking lot and adjusted the colors of the sky.</p>
+            </div>
+          </div>
+        </div>
+        <div class="clearfix visible-sm-block"></div>
+        <div class="col-sm-6 col-md-4 design">
+          <div class="thumbnail">
+            <img src="img/superior.jpg" alt="Blue mountain range with brown field, white clouds and yellow sun">
+            <div class="caption">
+              <h3>Superior, CO</h3>
+              <p>Used Photoshop to edit the foreground of this image. Used the masking, crop tool and multiple layers.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 design">
+          <div class="thumbnail">
+            <img src="img/Denver.jpg" alt="Denver Colorado Illustration">
+            <div class="caption">
+              <h3>Downtown Denver</h3>
+              <p>Used After Effects and Photoshop to create this image. Used 4 layers, one for the sky, mountains, hills and the city. Used depth of field to make this image come to life.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!-- Closing Tag for Design Section -->
+
     <!-- JavaScript -->
     <!-- jQuery )JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
