Added Contact Section

--- a/portfolio-site/static/index.html
+++ b/portfolio-site/static/index.html
@@ -485,6 +485,65 @@
       </div>
     </div><!-- Closing Tag for Design Section -->
 
+    <!-- Contact Section-->
+    <section id="contact" class="parallax-container container--big">
+      <div class="container">
+        <div class="row">
+          <div class="contact">
+            <h2>Contact Me</h2>
+            <div class="col-sm-6 col-xs-12 disappear">
+              <div class="info">
+                <h3>Lets Talk</h3>
+                <p>Feel free to contact me whether you have a question, a job opportunity or would just like to say hi!</p>
+              </div>
+              <div class="icon-info">
+                <i class="material-icons icon">phone_iphone</i>
+                <p><span class="icon_title">Phone: </span></p>
+                <p><span class="icon_text">720-473-3766</span></p>
+              </div>
+              <div class="icon-info">
+                <i class="material-icons icon">email</i>
+                <p><span class="icon_title">Email: </span></p>
+                <p><span class="icon_text">mr.stanlonmilow@gmail.com</span></p>
+              </div>
+            </div>
+            <div class="col-sm-6 col-xs-12">
+              
+              <form id="contact-form" action="https://formspree.io/f/xdakqqpl" method="POST">
+
+                <label>
+                  Name
+                  <input type="text" name="name" required>
+                </label>
+
+                <label>
+                  Email
+                  <input type="email" name="email" required>
+                </label>
+
+                <label>
+                  Subject
+                  <input type="text" name="subject">
+                </label>
+
+                <label>
+                  Message
+                  <textarea name="message" required></textarea>
+                </label>
+
+                <button type="submit" id="submit-btn">
+                  <span class="btn-text">Send</span>
+                  <span class="spinner" aria-hidden="true"></span>
+                </button>
+              </form>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="parallax parallax--bg bg-6"></div>
+    </section><!-- Closing Tag for Contact Section -->
+
     <!-- JavaScript -->
     <!-- jQuery )JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
