--- a/project-grocery-store/grocery_wireframes.html
+++ b/project-grocery-store/grocery_wireframes.html
@@ -29,7 +29,7 @@
 
           <!-- Navbar Brand -->
           <a href="#" class="navbar-brand">
-            <img src="../../img/logo.svg" alt="Stanlon Design">
+            <img src="../portfolio-site/static/img/logo.svg" alt="Stanlon Design">
           </a>
         </div>
 
