--- a/portfolio-site/static/index.html
+++ b/portfolio-site/static/index.html
@@ -66,11 +66,14 @@
         </div>
         <div class="col-md-7 about-txt">
           <h2>About Me</h2>
-          <p><span>W</span>elcome to Stanlon Design! My name is Stanlon and this is my web portfolio. I am a front-end web developer located in Denver, Colorado. I graduated from Metropolitan State University of Denver in 2016 with a Bachelor of Science degree in Technical Communications and an emphasis in Interactive Media. My passion is building custom made responsive websites. My skills are in HTML5, CSS, PHP, JavaScript and WordPress.</p>
+          <p><span>W</span>elcome to Stanlon Design! My name is Stanlon and this is my web portfolio. I am a front-end web developer located in Denver, Colorado. I graduated from Metropolitan State University of Denver in 2016 with a Bachelor of Science degree in Technical Communications and an emphasis in Interactive Media. My passion is building custom made responsive websites. My skills are in HTML5, CSS, JavaScript and PHP.</p>
           <p><span>O</span>n my free time, I like learning new web development skills by watching <a href="https://teamtreehouse.com/stanlon" target="_blank">TeamTreeHouse</a> tutorials. Other than coding, I like to design and create svg illustrations and animations. My hobbies also include photography, watching movies, hanging out with friends and working out at the local rec center. </p>
           <div class="aboutBtn">
-            <a href="img/resume.pdf" download="Stanlons Resume">
+            <a href="img/resume.pdf" target="_blank" rel="noopener noreferrer">
               <button type="button" class="btn btn-primary btn-lg">View Resume</button>
+            </a>
+            <a href="img/resume.pdf" download="Stanlon_Milow_Resume.pdf">
+              <button type="button" class="btn btn-primary btn-lg">Download Resume</button>
             </a>
           </div>
         </div>
@@ -259,7 +262,7 @@
       <div class="row">
         <div class="project">
           <div class="col-md-6 project-img">
-            <a href="projects/hookah_bar/index.html" target="_blank" rel="noopener"><img src="img/projects/hookah/1Main_photo.jpg" alt="project 2"></a>
+            <a href="../../project-hookah-bar/index.html" target="_blank" rel="noopener"><img src="img/projects/hookah/1Main_photo.jpg" alt="project 2"></a>
           </div>
           <div class="col-md-6 project-text">
             <h2>Hookah Bar Website</h2>
@@ -267,7 +270,7 @@
             <p>Learned a lot through this process especially dealing with a real world customer and delivering a sustainable product that the customer would be able to use for years to come. </p>
             <div class="btn-group pull-right" role="group" aria-label="...">
               <button type="button" class="btn btn-warning projectBTN">Show Documentation</button>
-              <a href="projects/hookah_bar/index.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">View Project</button></a>
+              <a href="../../project-hookah-bar/index.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">View Project</button></a>
             </div>
           </div>
         </div>
@@ -277,17 +280,17 @@
           <div class="col-xs-6 col-sm-3">
             <h3>Documentation</h3>
             <img src="img/projects/hookah/2Cover_Photos_PDF.jpg" alt="Documentation of website.">
-            <a href="projects/hookah_bar/hookahbar_docs.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="../../project-hookah-bar/hookahbar_docs.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>Wireframes</h3>
             <img src="img/projects/hookah/3Cover_Photos_Wireframes.jpg" alt="Wireframes of website.">
-            <a href="projects/hookah_bar/hookahbar_wireframes.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="../../project-hookah-bar/hookahbar_wireframes.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>PS Mockups</h3>
             <img src="img/projects/hookah/4Cover_Photos_PS_Mockups.jpg" alt="Photoshop Mockups of website.">
-            <a href="projects/hookah_bar/hookahbar_ps_mockups.zip" download><button type="button" class="btn btn-primary">Download</button></a>
+            <button type="button" class="btn btn-primary">Download</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>Tools Used</h3>
@@ -310,7 +313,7 @@
       <div class="row">
         <div class="project">
           <div class="col-md-6 project-img">
-            <a href="projects/barbershop/index.html" target="_blank" rel="noopener"><img src="img/projects/barbershop/1Main_photo.jpg" alt="project 1"></a>
+            <a href="../../project-barbershop/index.html" target="_blank" rel="noopener"><img src="img/projects/barbershop/1Main_photo.jpg" alt="project 1"></a>
           </div>
           <div class="col-md-6 project-text">
             <h2>Barbershop Website</h2>
@@ -318,7 +321,7 @@
             <p>Check out the documentation to view my plan, wireframes, photoshop mockups and tools I used in the making of this website.</p>
             <div class="btn-group pull-right" role="group" aria-label="...">
               <button type="button" class="btn btn-warning projectBTN">Show Documentation</button>
-              <a href="projects/barbershop/index.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">View Project</button></a>
+              <a href="../../project-barbershop/index.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">View Project</button></a>
             </div>
           </div>
         </div>
@@ -328,17 +331,17 @@
           <div class="col-xs-6 col-sm-3">
             <h3>Documentation</h3>
             <img src="img/projects/barbershop/2Cover_Photos_PDF.jpg" alt="Documentation of website.">
-            <a href="projects/barbershop/barbershop_docs.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="../../project-barbershop/barbershop_docs.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>Wireframes</h3>
             <img src="img/projects/barbershop/3Cover_Photos_Wireframes.jpg" alt="Wireframes of website.">
-            <a href="projects/barbershop/barbershop_wireframes.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="../../project-barbershop/barbershop_wireframes.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>PS Mockups</h3>
             <img src="img/projects/barbershop/4Cover_Photos_PS_Mockups.jpg" alt="Photoshop Mockups of website.">
-            <a href="projects/barbershop/barbershop_ps_mockups.zip" download><button type="button" class="btn btn-primary">Download</button></a>
+            <button type="button" class="btn btn-primary">Download</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>Tools Used</h3>
@@ -361,7 +364,7 @@
       <div class="row">
         <div class="project">
           <div class="col-md-6 project-img">
-            <a href="projects/grocery_store/index.html" target="_blank" rel="noopener"><img src="img/projects/grocery_store/1Main_photo.jpg" alt="project 3"></a>
+            <a href="../../project-grocery-store/index.html" target="_blank" rel="noopener"><img src="img/projects/grocery_store/1Main_photo.jpg" alt="project 3"></a>
           </div>
           <div class="col-md-6 project-text">
             <h2>Grocery Store Website</h2>
@@ -369,7 +372,7 @@
             <p>Biggest challenge I faced was figuring out how to subtract an add products to the total cost on the grocery items page. Extremely fun time making this.</p>
             <div class="btn-group pull-right" role="group" aria-label="...">
               <button type="button" class="btn btn-warning projectBTN">Show Documentation</button>
-              <a href="projects/grocery_store/index.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">View Project</button></a>
+              <a href="../../project-grocery-store/index.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">View Project</button></a>
             </div>
           </div>
         </div>
@@ -379,12 +382,12 @@
           <div class="col-xs-6 col-sm-3">
             <h3>Documentation</h3>
             <img src="img/projects/grocery_store/2Cover_Photos_PDF.jpg" alt="Documentation of website.">
-            <a href="projects/grocery_store/grocery_docs.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="../../project-grocery-store/grocery_docs.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>Wireframes</h3>
             <img src="img/projects/grocery_store/3Cover_Photos_Wireframes.jpg" alt="Wireframes of website.">
-            <a href="projects/grocery_store/grocery_wireframes.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="../../project-grocery-store/grocery_wireframes.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>PS Mockups</h3>
@@ -440,7 +443,7 @@
             <img src="img/rocket.gif" alt="Rocket launching">
             <div class="caption">
               <h3>Rocket Launch</h3>
-              <p>The making of this 2D svg animation was complex. Used Illustrator to create the graphic, then CSS3 to animate it.</p>
+              <p>The making of this 2D svg animation was complex. Used Illustrator and CSS3 to animate it.</p>
             </div>
           </div>
         </div>
@@ -485,7 +488,7 @@
       </div>
     </div><!-- Closing Tag for Design Section -->
 
-    <!-- Contact Section-->
+    <!-- Contact Section -->
     <section id="contact" class="parallax-container container--big">
       <div class="container">
         <div class="row">
