--- a/project-hookah-bar/hookahbar_docs.html
+++ b/project-hookah-bar/hookahbar_docs.html
@@ -11,8 +11,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="../../css/style.css">
+		<link rel="stylesheet" href="../portfolio-site/static/css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="project_body" data-spy="scroll" data-target="#exampleNavComponents">
 
@@ -29,7 +29,7 @@
 
           <!-- Navbar Brand -->
           <a href="#" class="navbar-brand">
-            <img src="../../img/logo.svg" alt="Stanlon Design">
+            <img src="../portfolio-site/static/img/logo.svg" alt="Stanlon Design">
           </a>
         </div>
 
