Fixed More Broken File Paths

--- a/project-barbershop/barbershop_docs.html
+++ b/project-barbershop/barbershop_docs.html
@@ -37,12 +37,12 @@
         <div class="collapse navbar-collapse" id="exampleNavComponents">
           <!-- Navbar Links -->
           <ul id="main-nav" class="nav navbar-nav navbar-right main-nav">
-            <li><a href="../../index.php" class="smooth-scroll">Home</a></li>
-            <li><a href="../../index.php#about" class="smooth-scroll">About</a></li>
-            <li><a href="../../index.php#skills" class="smooth-scroll">Skills</a></li>
-            <li><a href="../../index.php#portfolio" class="smooth-scroll">Portfolio</a></li>
-            <li><a href="../../index.php#designs" class="smooth-scroll">Designs</a></li>
-            <li><a href="../../index.php#contact" class="smooth-scroll">Contact</a></li>
+            <li><a href="../portfolio-site/static/index.html" class="smooth-scroll">Home</a></li>
+            <li><a href="../portfolio-site/static/index.html#about" class="smooth-scroll">About</a></li>
+            <li><a href="../portfolio-site/static/index.html#skills" class="smooth-scroll">Skills</a></li>
+            <li><a href="../portfolio-site/static/index.html#portfolio" class="smooth-scroll">Portfolio</a></li>
+            <li><a href="../portfolio-site/static/index.html#designs" class="smooth-scroll">Designs</a></li>
+            <li><a href="../portfolio-site/static/index.html#contact" class="smooth-scroll">Contact</a></li>
           </ul>
         </div>
       </div>
