--- a/project-grocery-store/grocery_wireframes.html
+++ b/project-grocery-store/grocery_wireframes.html
@@ -11,8 +11,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="../../css/style.css">
+		<link rel="stylesheet" href="../portfolio-site/static/css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body class="project_body" data-spy="scroll" data-target="#exampleNavComponents">
 
@@ -37,12 +37,12 @@
         <div class="collapse navbar-collapse" id="exampleNavComponents">
           <!-- Navbar Links -->
           <ul id="main-nav" class="nav navbar-nav navbar-right main-nav">
-            <li><a href="../../index.php" class="smooth-scroll">Home</a></li>
-            <li><a href="../../index.php#about" class="smooth-scroll">About</a></li>
-            <li><a href="../../index.php#skills" class="smooth-scroll">Skills</a></li>
-            <li><a href="../../index.php#portfolio" class="smooth-scroll">Portfolio</a></li>
-            <li><a href="../../index.php#designs" class="smooth-scroll">Designs</a></li>
-            <li><a href="../../index.php#contact" class="smooth-scroll">Contact</a></li>
+            <li><a href="../portfolio-site/static/index.html" class="smooth-scroll">Home</a></li>
+            <li><a href="../portfolio-site/static/index.html#about" class="smooth-scroll">About</a></li>
+            <li><a href="../portfolio-site/static/index.html#skills" class="smooth-scroll">Skills</a></li>
+            <li><a href="../portfolio-site/static/index.html#portfolio" class="smooth-scroll">Portfolio</a></li>
+            <li><a href="../portfolio-site/static/index.html#designs" class="smooth-scroll">Designs</a></li>
+            <li><a href="../portfolio-site/static/index.html#contact" class="smooth-scroll">Contact</a></li>
           </ul>
         </div>
       </div>
