Update portfolio links to live Netlify projects

--- a/portfolio-site/static/index.html
+++ b/portfolio-site/static/index.html
@@ -262,7 +262,7 @@
       <div class="row">
         <div class="project">
           <div class="col-md-6 project-img">
-            <a href="../../project-hookah-bar/index.html" target="_blank" rel="noopener"><img src="img/projects/hookah/1Main_photo.jpg" alt="project 2"></a>
+            <a href="https://stanlondesign-project-hookah-bar.netlify.app" target="_blank" rel="noopener noreferrer"><img src="img/projects/hookah/1Main_photo.jpg" alt="project 1"></a>
           </div>
           <div class="col-md-6 project-text">
             <h2>Hookah Bar Website</h2>
@@ -270,7 +270,7 @@
             <p>Learned a lot through this process especially dealing with a real world customer and delivering a sustainable product that the customer would be able to use for years to come. </p>
             <div class="btn-group pull-right" role="group" aria-label="...">
               <button type="button" class="btn btn-warning projectBTN">Show Documentation</button>
-              <a href="../../project-hookah-bar/index.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">View Project</button></a>
+              <a href="https://stanlondesign-project-hookah-bar.netlify.app" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary">View Project</button></a>
             </div>
           </div>
         </div>
@@ -280,12 +280,12 @@
           <div class="col-xs-6 col-sm-3">
             <h3>Documentation</h3>
             <img src="img/projects/hookah/2Cover_Photos_PDF.jpg" alt="Documentation of website.">
-            <a href="../../project-hookah-bar/hookahbar_docs.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="https://stanlon-project-hookah-bar.netlify.app/hookahbar_docs.html" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>Wireframes</h3>
             <img src="img/projects/hookah/3Cover_Photos_Wireframes.jpg" alt="Wireframes of website.">
-            <a href="../../project-hookah-bar/hookahbar_wireframes.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="https://stanlon-project-hookah-bar.netlify.app/hookahbar_wireframes.html" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>PS Mockups</h3>
@@ -313,7 +313,7 @@
       <div class="row">
         <div class="project">
           <div class="col-md-6 project-img">
-            <a href="../../project-barbershop/index.html" target="_blank" rel="noopener"><img src="img/projects/barbershop/1Main_photo.jpg" alt="project 1"></a>
+            <a href="https://stanlondesign-project-barbershop.netlify.app" target="_blank" rel="noopener noreferrer"><img src="img/projects/barbershop/1Main_photo.jpg" alt="project 2"></a>
           </div>
           <div class="col-md-6 project-text">
             <h2>Barbershop Website</h2>
@@ -321,7 +321,7 @@
             <p>Check out the documentation to view my plan, wireframes, photoshop mockups and tools I used in the making of this website.</p>
             <div class="btn-group pull-right" role="group" aria-label="...">
               <button type="button" class="btn btn-warning projectBTN">Show Documentation</button>
-              <a href="../../project-barbershop/index.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">View Project</button></a>
+              <a href="https://stanlondesign-project-barbershop.netlify.app" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary">View Project</button></a>
             </div>
           </div>
         </div>
@@ -331,12 +331,12 @@
           <div class="col-xs-6 col-sm-3">
             <h3>Documentation</h3>
             <img src="img/projects/barbershop/2Cover_Photos_PDF.jpg" alt="Documentation of website.">
-            <a href="../../project-barbershop/barbershop_docs.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="https://stanlondesign-project-barbershop.netlify.app/barbershop_docs.html" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>Wireframes</h3>
             <img src="img/projects/barbershop/3Cover_Photos_Wireframes.jpg" alt="Wireframes of website.">
-            <a href="../../project-barbershop/barbershop_wireframes.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="https://stanlondesign-project-barbershop.netlify.app/barbershop_wireframes.html" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>PS Mockups</h3>
@@ -364,7 +364,7 @@
       <div class="row">
         <div class="project">
           <div class="col-md-6 project-img">
-            <a href="../../project-grocery-store/index.html" target="_blank" rel="noopener"><img src="img/projects/grocery_store/1Main_photo.jpg" alt="project 3"></a>
+            <a href="https://stanlondesign-project-grocery-store.netlify.app" target="_blank" rel="noopener noreferrer"><img src="img/projects/grocery_store/1Main_photo.jpg" alt="project 3"></a>
           </div>
           <div class="col-md-6 project-text">
             <h2>Grocery Store Website</h2>
@@ -372,7 +372,7 @@
             <p>Biggest challenge I faced was figuring out how to subtract an add products to the total cost on the grocery items page. Extremely fun time making this.</p>
             <div class="btn-group pull-right" role="group" aria-label="...">
               <button type="button" class="btn btn-warning projectBTN">Show Documentation</button>
-              <a href="../../project-grocery-store/index.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">View Project</button></a>
+              <a href="https://stanlondesign-project-grocery-store.netlify.app" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary">View Project</button></a>
             </div>
           </div>
         </div>
@@ -382,12 +382,12 @@
           <div class="col-xs-6 col-sm-3">
             <h3>Documentation</h3>
             <img src="img/projects/grocery_store/2Cover_Photos_PDF.jpg" alt="Documentation of website.">
-            <a href="../../project-grocery-store/grocery_docs.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="https://stanlondesign-project-grocery-store.netlify.app/grocery_docs.html" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>Wireframes</h3>
             <img src="img/projects/grocery_store/3Cover_Photos_Wireframes.jpg" alt="Wireframes of website.">
-            <a href="../../project-grocery-store/grocery_wireframes.html" target="_blank" rel="noopener"><button type="button" class="btn btn-primary">Preview</button></a>
+            <a href="https://stanlondesign-project-grocery-store.netlify.app/grocery_wireframes.html" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-primary">Preview</button></a>
           </div>
           <div class="col-xs-6 col-sm-3">
             <h3>PS Mockups</h3>
