Updated About Info, Add working contact form with Netlify integration and success redirect

--- a/portfolio-site/static/index.html
+++ b/portfolio-site/static/index.html
@@ -46,7 +46,7 @@
           </ul>
         </div>
       </div>
-    </nav><!--Closing Tag for Na Menu -->
+    </nav><!--Closing Tag for Nav Menu -->
 
     <!-- Home Section -->
     <section id="home" class="parallax-container container--big">
@@ -66,8 +66,8 @@
         </div>
         <div class="col-md-7 about-txt">
           <h2>About Me</h2>
-          <p><span>W</span>elcome to Stanlon Design! My name is Stanlon and this is my web portfolio. I am a front-end web developer located in Denver, Colorado. I graduated from Metropolitan State University of Denver in 2016 with a Bachelor of Science degree in Technical Communications and an emphasis in Interactive Media. My passion is building custom made responsive websites. My skills are in HTML5, CSS, JavaScript and PHP.</p>
-          <p><span>O</span>n my free time, I like learning new web development skills by watching <a href="https://teamtreehouse.com/stanlon" target="_blank">TeamTreeHouse</a> tutorials. Other than coding, I like to design and create svg illustrations and animations. My hobbies also include photography, watching movies, hanging out with friends and working out at the local rec center. </p>
+          <p><span>W</span>elcome to Stanlon Design! My name is Stanlon and this is my web portfolio. I am a Junior Front-End Web Developer located in Denver, Colorado. I graduated from Metropolitan State University of Denver in 2016 with a Bachelor of Science degree in Technical Communications and an emphasis in Interactive Media. My passion is building custom made responsive websites. My skills are in HTML5, CSS and JavaScript.</p>
+          <p><span>O</span>n my free time, I like learning new web development skills by earning certificates watching <a href="https://www.linkedin.com/in/stanlon-milow/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn profile">LinkedIn Learning</a> tutorials. I keep track of my projects and code changes through <a href="https://github.com/stanlon" target="_blank" rel="noopener noreferrer" aria-label="GitHub profile">GitHub</a>. Other than coding, I like to design and create low fidelity wireframes, high fidelity mockups, svg illustrations and animations. My hobbies also include photography, watching movies, hanging out with friends and working out to stay fit and healthy.</p>
           <div class="aboutBtn">
             <a href="img/resume.pdf" target="_blank" rel="noopener noreferrer">
               <button type="button" class="btn btn-primary btn-lg">View Resume</button>
@@ -123,10 +123,6 @@
             <img src="img/jquery.png" alt="jQuery">
             <h4>jQuery</h4>
           </div>
-          <div class="individual_skill">
-            <img src="img/vue.png" alt="Vue">
-            <h4>Vue</h4>
-          </div>
         </div>
         <div class="col-sm-6 skill">
           <h2>Back End:</h2>
@@ -134,6 +130,7 @@
             <img src="img/php.png" alt="php">
             <h4>PHP</h4>
           </div>
+          <!-- Need to Add Python -->
         </div>
       </div>
       <div class="row">
@@ -155,6 +152,7 @@
             <img src="img/inkscape.png" alt="Inkscape">
             <h4>Inkscape</h4>
           </div>
+          <!-- Need to add Figma -->
         </div>
         <div class="col-sm-6 skill">
           <h2>Text Editors:</h2>
@@ -170,6 +168,7 @@
             <img src="img/dreamweaver.png" alt="DreamWeaver">
             <h4>DreamWeaver</h4>
           </div>
+          <!-- Need to add Visual Studio -->
         </div>
       </div>
       <div class="row">
@@ -238,6 +237,7 @@
             <img src="img/terminal.png" alt="Command Line">
             <h4>Command Line</h4>
           </div>
+          <!-- Need to add ChatGPT -->
         </div>
       </div>
     </div><!-- Closing Tag for Skills Section -->
@@ -512,32 +512,37 @@
             </div>
             <div class="col-sm-6 col-xs-12">
               
-              <form id="contact-form" action="https://formspree.io/f/xdakqqpl" method="POST">
+              <form
+                name="contact"
+                method="POST"
+                action="thanks.html"
+                data-netlify="true"
+                data-netlify-honeypot="bot-field"
+                data-netlify-recaptcha="true"
+              >
+                <!-- REQUIRED for Netlify Forms -->
+                <input type="hidden" name="form-name" value="contact" />
 
-                <label>
-                  Name
-                  <input type="text" name="name" required>
-                </label>
+                <!-- Honeypot field (spam trap) -->
+                <p style="display:none;">
+                  <label>
+                    Don’t fill this out: <input type="text" name="bot-field" />
+                  </label>
+                </p>
 
-                <label>
-                  Email
-                  <input type="email" name="email" required>
-                </label>
+                <label for="name">Name</label>
+                <input id="name" type="text" name="name" required />
 
-                <label>
-                  Subject
-                  <input type="text" name="subject">
-                </label>
+                <label for="email">Email</label>
+                <input id="email" type="email" name="email" required />
 
-                <label>
-                  Message
-                  <textarea name="message" required></textarea>
-                </label>
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="6" required></textarea>
 
-                <button type="submit" id="submit-btn">
-                  <span class="btn-text">Send</span>
-                  <span class="spinner" aria-hidden="true"></span>
-                </button>
+                <!-- reCAPTCHA widget -->
+                <div data-netlify-recaptcha="true" aria-label="reCAPTCHA"></div>
+
+                <button type="submit">Send</button>
               </form>
 
             </div>
@@ -546,6 +551,32 @@
       </div>
       <div class="parallax parallax--bg bg-6"></div>
     </section><!-- Closing Tag for Contact Section -->
+
+    <!-- Footer -->
+    <footer class="site-footer">
+        <p>&copy; 2026 StanlonDesign - 
+          <a
+            href="https://github.com/stanlon"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="GitHub profile"
+          >
+            GitHub
+          </a>
+        </p>
+    </footer><!-- Closing Footer Tag -->
+
+    <!-- Netlify Forms fallback (ensures detection) -->
+    <form
+      name="contact"
+      data-netlify="true"
+      data-netlify-recaptcha="true"
+      hidden
+    >
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
 
     <!-- JavaScript -->
     <!-- jQuery )JS -->
